eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IBB_Product_Set__c.object
<CustomObject>
    <fields>
        <fullName>Profit_accrued__c</fullName>
        <label>Profit accrued</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_calculated__c</fullName>
        <label>Profit calculated</label>
        <picklist>
            <picklistValues>
                <fullName>monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>maturity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_of_income__c</fullName>
        <label>Profit of income</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_paid__c</fullName>
        <label>Profit paid</label>
        <picklist>
            <picklistValues>
                <fullName>monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>maturity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_paid_to__c</fullName>
        <label>Profit paid to</label>
        <picklist>
            <picklistValues>
                <fullName>External account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal IBB account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Type_Error__c</fullName>
        <label>Property Type Error</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_duration_1__c</fullName>
        <label>Rate duration 1</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_duration_2__c</fullName>
        <label>Rate duration 2</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_duration_3__c</fullName>
        <label>Rate duration 3</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_duration_date_1__c</fullName>
        <label>Rate duration date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_duration_date_2__c</fullName>
        <label>Rate duration date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_duration_date_3__c</fullName>
        <label>Rate duration date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_percentage_1__c</fullName>
        <label>Rate percentage 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_percentage_2__c</fullName>
        <label>Rate percentage 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_percentage_3__c</fullName>
        <label>Rate percentage 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Redemption_given__c</fullName>
        <label>Redemption given</label>
        <picklist>
            <picklistValues>
                <fullName>No redemption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial redemption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full redemption</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Redemption_type__c</fullName>
        <label>Redemption type</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage of the amount paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund of solicitors contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund of valuations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund of legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash back</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Redemption_value_currency__c</fullName>
        <label>Redemption value £</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redemption_value_percentage__c</fullName>
        <label>Redemption value %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repayment_duration_1__c</fullName>
        <label>Repayment duration 1</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repayment_duration_2__c</fullName>
        <label>Repayment duration 2</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repayment_duration_3__c</fullName>
        <label>Repayment duration 3</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repayment_end_date_1__c</fullName>
        <label>Repayment end date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repayment_end_date_2__c</fullName>
        <label>Repayment end date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repayment_end_date_3__c</fullName>
        <label>Repayment end date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShortProductType__c</fullName>
        <label>ShortProductType</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_frequency__c</fullName>
        <label>Statement frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suitable_Employment_Types__c</fullName>
        <label>Suitable Employment Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suitable_Property_Types__c</fullName>
        <label>Suitable Property Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Finance__c</fullName>
        <label>Type of Finance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_account__c</fullName>
        <label>Type of account</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On demand notice account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Young savers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wakala treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valuation_fee_amount_paid__c</fullName>
        <label>Valuation fee amount paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_fee_paid_by__c</fullName>
        <label>Valuation fee paid by</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_of_IBB_legal_fees__c</fullName>
        <label>Value of IBB legal fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_customer_legal_fee__c</fullName>
        <label>Value of customer legal fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_product_benchmark__c</fullName>
        <label>Variable product benchmark</label>
        <picklist>
            <picklistValues>
                <fullName>BBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_does_product_revert_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where does product revert to</label>
        <referenceTo>IBB_Product__c</referenceTo>
        <relationshipName>IBB_Product_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Set</label>
    <listViews>
        <fullName>HPP_CAA</fullName>
        <columns>NAME</columns>
        <columns>EventDirector__c</columns>
        <columns>External_ProductEventDirector__c</columns>
        <columns>Conga_Application_Form__c</columns>
        <columns>IDD_Document__c</columns>
        <columns>Property_Type_Error__c</columns>
        <columns>Employment_Type_Error__c</columns>
        <columns>Finance_Type_Error__c</columns>
        <columns>Product_Switch_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Max_No_of_Applicants__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>HPP CAA</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Liabilities</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Liabilities</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sets</pluralLabel>
    <recordTypes>
        <fullName>HPP</fullName>
        <active>true</active>
        <description>For use with HPP eligibility</description>
        <label>HPP</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>